061 ==> 195809 : Radio buttons in "Search Group" "Options" in "Advanced search" dialog do not show selection status.
062 ==> 177686 : Menu text is invisible.
063 ==> 198509 : Tagging by drag and drop not possible anymore.
064 ==> 198531 : Compilation error in libpgf [PATCH].
065 ==> 198530 : Compilation error in imagecategorizedview.cpp.
066 ==> 139361 : Templates for meta data.
067 ==> 

*********************************************************************************************************
digiKam 1.0.0-beta1 - Release date: 2009-06-07

NEW FEATURES:

General        : Add new Batch Queue Manager (http://www.digikam.org/node/427).
General        : New tool bar animation banner.
General        : Fix compilation under MSVC 9.
General        : New first run assistant (http://www.digikam.org/node/442).
General        : New dialog to show Database statistics.
General        : Add support of wavelets image file format PGF (http://www.libpgf.org).

AlbumGui       : Icon view is now based on pure Qt4 model/view.
AlbumGui       : New overlay button over icon view items to perform lossless rotations.

ImageEditor    : New Liquid Rescale tool (http://www.digikam.org/node/439).

CameraGUI      : New history of camera actions processed.

BUGFIXES FROM KDE BUGZILLA (alias B.K.O | http://bugs.kde.org):

001 ==> 091742 : Batch process auto levels.
002 ==> 149361 : Not all edit actions are available as batch commands (for example auto-levels and gamma correction).
003 ==> 187523 : digiKam crashes on startup (undefined symbol).
004 ==> 187569 : Crash on star removing when filtering by stars.
005 ==> 186549 : digiKam crashes when hovering the bottom part of its.
006 ==> 187641 : Error while loading shared libraries: libkdcraw.so.5.
007 ==> 187429 : Crash on Launch after disable KIPI plugins rotate.
008 ==> 187937 : Writing tags to files doesn't update modification timestamp.
009 ==> 184687 : Crash after deleting an empty album.